--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,8 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Experts for welding and assembly of metal construction"
+      content="Experts for welding and assembly of metal construction - Plan-Tech"
+      data-rh="true"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
     <!--
